[project]
name = "telegram-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=0.2.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
